tests/testcases/invalid/semantic/16_multiple_default_in_switch.ciel
// Error: multiple 'default' labels in the same switch
int main() {
    int x = 5;
    switch (x) {
        case 1:
            return 1;
        default:
            return 2;
        default:  // Error: duplicate default
            return 3;
    }
}
